--- a/Src/Makefile
+++ b/Src/Makefile
@@ -10,6 +10,7 @@ SOURCES += couleurs.cpp
 SOURCES += tuile.cpp
 SOURCES += direction.cpp
 SOURCES += jeu.cpp
+SOURCES += arrete.cpp
 
 OBJECTS = $(SOURCES:.cpp=.o)
 
